src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@shaders__compiled__paint_brush.comp.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/paint_brush.comp.json
---
{
  "sourceFileName": "paint_brush.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "brushParams",
      "elementType": {
        "typeName": "BrushParams",
        "fields": [
          {
            "kind": "resource",
            "fieldName": "wetMask",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 1,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "pressure",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 2,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "pigment_0_3",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 3,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          },
          {
            "kind": "resource",
            "fieldName": "pigment_4_7",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 4,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          },
          {
            "kind": "resource",
            "fieldName": "pigment_8_11",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 5,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          },
          {
            "kind": "resource",
            "fieldName": "saturation",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 6,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "scalar",
            "fieldName": "pointCount",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 4
            },
            "scalarType": "uint32"
          },
          {
            "kind": "scalar",
            "fieldName": "brushRadius",
            "binding": {
              "kind": "uniform",
              "offset": 4,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "scalar",
            "fieldName": "brushOpacity",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "scalar",
            "fieldName": "brushPressure",
            "binding": {
              "kind": "uniform",
              "offset": 12,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "vector",
            "fieldName": "pigmentColor_0_3",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 16
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "pigmentColor_4_7",
            "binding": {
              "kind": "uniform",
              "offset": 32,
              "size": 16
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "pigmentColor_8_11",
            "binding": {
              "kind": "uniform",
              "offset": 48,
              "size": 16
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "canvasSize",
            "binding": {
              "kind": "uniform",
              "offset": 64,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "pointer",
            "fieldName": "strokePoints",
            "binding": {
              "kind": "uniform",
              "offset": 72,
              "size": 8
            },
            "pointeeType": {
              "typeName": "StrokePoint",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "position",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            },
            "pointeeSize": 8,
            "access": "read"
          }
        ]
      }
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    16,
    16,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 1,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 2,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 3,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 4,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 5,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 6,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
