src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@shaders__compiled__ray_marching.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/ray_marching.json
---
{
  "sourceFileName": "ray_marching.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "RayMarchingParams",
        "fields": [
          {
            "kind": "struct",
            "fieldName": "camera",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 80
            },
            "structType": {
              "typeName": "RayMarchCamera",
              "fields": [
                {
                  "kind": "struct",
                  "fieldName": "inverseViewProj",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 64
                  },
                  "structType": {
                    "typeName": "Projection",
                    "fields": [
                      {
                        "kind": "matrix",
                        "fieldName": "matrix",
                        "binding": {
                          "kind": "uniform",
                          "offset": 0,
                          "size": 64
                        },
                        "rowCount": 4,
                        "columnCount": 4,
                        "elementType": {
                          "kind": "scalar",
                          "scalarType": "float32"
                        }
                      }
                    ]
                  }
                },
                {
                  "kind": "vector",
                  "fieldName": "position",
                  "binding": {
                    "kind": "uniform",
                    "offset": 64,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "vector",
            "fieldName": "lightPosition",
            "binding": {
              "kind": "uniform",
              "offset": 80,
              "size": 12
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "scalar",
            "fieldName": "sphereCount",
            "binding": {
              "kind": "uniform",
              "offset": 92,
              "size": 4
            },
            "scalarType": "uint32"
          },
          {
            "kind": "scalar",
            "fieldName": "boxCount",
            "binding": {
              "kind": "uniform",
              "offset": 96,
              "size": 4
            },
            "scalarType": "uint32"
          },
          {
            "kind": "vector",
            "fieldName": "resolution",
            "binding": {
              "kind": "uniform",
              "offset": 104,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "spheres",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 1,
              "count": 1
            },
            "resourceShape": "structuredBuffer",
            "resultType": {
              "kind": "struct",
              "typeName": "Sphere",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "center",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "radius",
                  "binding": {
                    "kind": "uniform",
                    "offset": 12,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "vector",
                  "fieldName": "color",
                  "binding": {
                    "kind": "uniform",
                    "offset": 16,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "resource",
            "fieldName": "boxes",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 2,
              "count": 1
            },
            "resourceShape": "structuredBuffer",
            "resultType": {
              "kind": "struct",
              "typeName": "BoxRect",
              "fields": [
                {
                  "kind": "struct",
                  "fieldName": "transform",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 64
                  },
                  "structType": {
                    "typeName": "Projection",
                    "fields": [
                      {
                        "kind": "matrix",
                        "fieldName": "matrix",
                        "binding": {
                          "kind": "uniform",
                          "offset": 0,
                          "size": 64
                        },
                        "rowCount": 4,
                        "columnCount": 4,
                        "elementType": {
                          "kind": "scalar",
                          "scalarType": "float32"
                        }
                      }
                    ]
                  }
                },
                {
                  "kind": "vector",
                  "fieldName": "radii",
                  "binding": {
                    "kind": "uniform",
                    "offset": 64,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "vector",
                  "fieldName": "color",
                  "binding": {
                    "kind": "uniform",
                    "offset": 80,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": [
      {
        "kind": "struct",
        "parameterName": "input",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 1
        },
        "typeName": "FragInput",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "position",
            "semanticName": "SV_POSITION",
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "centeredCoords",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 112
          },
          {
            "binding": 1,
            "descriptorType": "storageBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 112
          },
          {
            "binding": 2,
            "descriptorType": "storageBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 112
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
